--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.19.0",
     "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/extension-accelerate": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/cli": "^4.1.16",
     "@tailwindcss/postcss": "^4.1.16",
@@ -25,6 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.0",
